# Rapid

./: .gitignore  README.md  file_parser.py  plan.md  server.py
file_scanner/: Cargo.toml
file_scanner/src/: config.rs  embedding.rs  ffi.rs  lib.rs  parsing.rs  scanner.rs  structs.rs  utils.rs
logic/: context_processing.py  ffi.py  file_collection.py  rust_adapter.py  tool_implementations.py
test_data/: csharp_sample.cs  python_sample.py  rust_sample.rs  typescript_sample.ts
tests/: test_direct_tool_invocations.py
