[package]
name = "file_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_scanner"
crate-type = ["cdylib"]

[dependencies]
walkdir = "2"
rayon = "1"
ignore = "0.4"
glob = "0.3"
libc = "0.2"
tree-sitter = "0.20"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-python = "0.20.0"
tree-sitter-rust = "0.20.0"
tree-sitter-typescript = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "4"
tokio = { version = "1.45"}
anyhow = "1.0.86"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19.0"
sled = "0.34"
bincode = "1.3"
sha2 = "0.10"
